Bug 36800724 - [36774493->22.06.10] Topics: New channels are not assigned to a subscriber when the count is increased (merge 14.1.1.2206 -> ce/22.06 109920 109927)
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v22.06/": change = 109928]